--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 <body>
     <audio id="música" src="West - Euro$tep.mp3" autoplay></audio>
     <div class="game-container">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+
+     <div id="click-feedback">Good</div>
+
+      <div class="game-board">
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+            <div class="cell"></div>
+        </div>
+
+      <div id="score">Score: 0</div>
+
     </div>
 
     <script src="script.js"></script>
