change index 0 song

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio id="música" src="West - Euro$tep.mp3" autoplay></audio>
+    <audio id="música" src="MJ_BillieJean.mp3" autoplay></audio>
     <div class="game-container">
 
      <div id="click-feedback">Good</div>
